feat: overflow della chat attiva

--- a/css/style.css
+++ b/css/style.css
@@ -195,7 +195,7 @@ li {
 }
 
 .chat-attiva { 
-    
+    overflow-y:scroll;
     height: calc((100% - 8%) - 50px);
     background-image: url(../img/mine.jpg);
 
