--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,12 @@
 }
 /* ----------------------------------------------------------------------------- */
 
+body {
+    height: 100vh;
+    background-color: gray;
+}
+
+
 
 
 img {
@@ -45,7 +51,7 @@ img {
     
     min-width: 35%;
 
-    background-color: fafafa;
+    background-color: #fafafa;
 }
 
 .head{
