--- a/css/style.css
+++ b/css/style.css
@@ -173,6 +173,13 @@ img {
     font-size: 10px;
 }
 
+.orario {
+    color: #b1b1b1;
+
+    font-size: 10px;
+    align-self:baseline;
+}
+
 li {
 
     display: flex;
@@ -257,18 +264,21 @@ li {
 
 }
 
-
 .active {
 
     background-color: #e9ebeb;
 }
 
+
+
 .message {
     
-    padding: 1em 0.5em;
+    padding: 0.5em 0.5em;
     margin: 10px;
     border-radius: 12px;
 }
+
+
 /* ---------------- */
 
 
@@ -296,7 +306,7 @@ il messaggio è ricevuto o inviato */
 }
 .green {
     
-    background-color: green;
+    background-color: #d5f9ba;
 }
 /* ---------------- */
 
