--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,14 @@
 }
 /* ----------------------------------------------------------------------------- */
 
+
+/* ----------------------------------------------------------------------------- */
+
+
 body {
     height: 100%;
     background-color: gray;
 }
-
-
-
 
 img {
 
@@ -20,6 +21,9 @@ img {
     height: 35px;
     border-radius: 50%;
 }
+
+/* ----------------------------------------------------------------------------- */
+
 
 
 /* ----------------------------------------------------------------------------- */
@@ -44,17 +48,17 @@ img {
 /* sezione sinistra (contatti) */
 .sezione-contatti {
 
-    border-right: 0.5px solid rgba(198, 198, 198, 0.681);
-
     display: flex;
     flex-direction: column;
     
     min-width: 35%;
-
+    
     background-color: #fafafa;
+    border-right: 0.5px solid rgba(198, 198, 198, 0.681);
 }
 
-.head{
+.head {
+
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -86,9 +90,9 @@ img {
     align-items: center;
 
     height: 10%;
+
     background-color: #8edafc;
     padding-left: 15px;
-
 }
 
 .icona-notifica {
@@ -111,10 +115,12 @@ img {
 }
 
 .testo-notifica-1 {
+
     font-size: 15px;
 }
 
 .testo-notifica-2 {
+
     text-decoration: underline;
     font-size: 12px;
     color: #b1b1b1;
@@ -124,20 +130,21 @@ img {
 
     display: flex;
 
-
     padding: 3px;
     border-bottom: 0.5px rgba(128, 128, 128, 0.277) solid;
 
 }
 
 .bottone-ricerca {
-    border: 0.5px rgba(128, 128, 128, 0.277) solid;
 
-    background-color: transparent;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
     width: 15%;
     padding: 4px;
+
+    
+    background-color: transparent;
+    border: 0.5px rgba(128, 128, 128, 0.277) solid;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
 }
 
 .fa-magnifying-glass {
@@ -147,9 +154,9 @@ img {
 
 .input-ricerca {
     width: 85%;
+    padding-left: 10px;
 
     font-size: 10px;
-    padding-left: 10px;
     border: 0.5px rgba(128, 128, 128, 0.277) solid;
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
@@ -165,6 +172,7 @@ img {
 }
 
 .ultimo-messaggio {
+
     color: #b1b1b1;
 }
 
@@ -174,13 +182,19 @@ img {
 }
 
 .orario {
+
     color: #b1b1b1;
 
     font-size: 10px;
     align-self:baseline;
 }
 
+.cont-lista-contatti {
+    overflow-y: auto;
+}
+
 .lista-contatti {
+
     padding-left: 0;
 }
 
@@ -212,10 +226,18 @@ li {
 }
 
 .chat-attiva { 
+
     overflow-y: auto;
+    overscroll-behavior-y: contain;
+    scroll-snap-type: y proximity;
+
     height: calc((100% - 8%) - 50px);
     background-image: url(../img/mine.jpg);
 
+}
+
+.chat-attiva > div:last-child {
+    scroll-snap-align: end;
 }
 
 .chat-bar {
@@ -243,10 +265,10 @@ li {
     border: none;
     height: 80%;
     width: 10%;
-
 }
 
 .fa-microphone {
+
     color: #b1b1b1;
     font-size: 20px;
 }
@@ -256,16 +278,16 @@ li {
     height: 80%;
     width: calc(100% - 60px);
 
+    padding-left: 10px;
+
     border: none;
     border-radius: 5px;
-
-    padding-left: 10px;
 }
 
 .fa-face-smile {
-    color: #b1b1b1;
-    font-size: 20px;
 
+    font-size: 20px;
+    color: #b1b1b1;
 }
 
 .active {
@@ -278,38 +300,37 @@ li {
     align-self: flex-end;
 
     font-size: 8px;
-    
 }
 
 .testo-messaggio {
-        max-width: 88%;
-        word-wrap: break-word;
+
+    max-width: 88%;
+    word-wrap: break-word;
 }
-
-.messaggio {
-
-}
-
 
 .message {
+
     position: relative;
 
     display: flex;
     justify-content: end;
     gap: 5px;
 
+    max-width: 70%;
+
     word-wrap:break-word;
     
-    max-width: 70%;
     padding: 0.5em 0.5em;
     margin: 10px;
     border-radius: 12px;
 }
 
 .dropdown-toggle {
+
     position: absolute;
     top: -5px;
     right: 5px;
+
     background-color: transparent;
     border: none;
 
@@ -319,7 +340,6 @@ li {
 .message:hover .dropdown-toggle {
     display: block;
 }
-
 
 /* ---------------- */
 
@@ -344,7 +364,6 @@ il messaggio è ricevuto o inviato */
     display: flex;
     
     justify-content: flex-start;
-    
 }
 .green {
     
@@ -357,16 +376,16 @@ il messaggio è ricevuto o inviato */
 /* ----------------------------------------------------------------------------- */
 
 
-
-
-
 /* ----------------------------------------------------------------------------- */
 
-
+/* Vista puntatore (pointer sugli elementi cliccabili) */
 ul:hover,
 i:hover,
 .testo-notifica-2:hover,
 img {
     cursor: pointer;
 }
+
+/* ----------------------------------------------------------------------------- */
+
 
